test/checker/register/invalid/duplicate_field.km
type Foo {
    Bar: Integer,
    Baz: Natural,
    Bar: String
};
